v5.2.6/build/log/idf_py_stdout_output_6112
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\vital_signs_monitoring_sys\build\bootloader\esp-idf\esptool_py && C:\Espressif\tools\python\v5.2.6\venv\Scripts\python.exe C:/esp/v5.2.6/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/vital_signs_monitoring_sys/build/bootloader/bootloader.bin"
Bootloader binary size 0x68c0 bytes. 0x740 bytes (6%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/vital_signs_monitoring_sys.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/vital_signs_monitoring_sys.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20250707\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.6\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/vital_signs_monitoring_sys/build/config -ID:/vital_signs_monitoring_sys/main -IC:/esp/v5.2.6/esp-idf/components/newlib/platform_include -IC:/esp/v5.2.6/esp-idf/components/freertos/config/include -IC:/esp/v5.2.6/esp-idf/components/freertos/config/include/freertos -IC:/esp/v5.2.6/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v5.2.6/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v5.2.6/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v5.2.6/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v5.2.6/esp-idf/components/freertos/esp_additions/include -IC:/esp/v5.2.6/esp-idf/components/esp_hw_support/include -IC:/esp/v5.2.6/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v5.2.6/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/esp/v5.2.6/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v5.2.6/esp-idf/components/heap/include -IC:/esp/v5.2.6/esp-idf/components/log/include -IC:/esp/v5.2.6/esp-idf/components/soc/include -IC:/esp/v5.2.6/esp-idf/components/soc/esp32 -IC:/esp/v5.2.6/esp-idf/components/soc/esp32/include -IC:/esp/v5.2.6/esp-idf/components/hal/platform_port/include -IC:/esp/v5.2.6/esp-idf/components/hal/esp32/include -IC:/esp/v5.2.6/esp-idf/components/hal/include -IC:/esp/v5.2.6/esp-idf/components/esp_rom/include -IC:/esp/v5.2.6/esp-idf/components/esp_rom/include/esp32 -IC:/esp/v5.2.6/esp-idf/components/esp_rom/esp32 -IC:/esp/v5.2.6/esp-idf/components/esp_common/include -IC:/esp/v5.2.6/esp-idf/components/esp_system/include -IC:/esp/v5.2.6/esp-idf/components/esp_system/port/soc -IC:/esp/v5.2.6/esp-idf/components/esp_system/port/include/private -IC:/esp/v5.2.6/esp-idf/components/xtensa/esp32/include -IC:/esp/v5.2.6/esp-idf/components/xtensa/include -IC:/esp/v5.2.6/esp-idf/components/xtensa/deprecated_include -IC:/esp/v5.2.6/esp-idf/components/lwip/include -IC:/esp/v5.2.6/esp-idf/components/lwip/include/apps -IC:/esp/v5.2.6/esp-idf/components/lwip/include/apps/sntp -IC:/esp/v5.2.6/esp-idf/components/lwip/lwip/src/include -IC:/esp/v5.2.6/esp-idf/components/lwip/port/include -IC:/esp/v5.2.6/esp-idf/components/lwip/port/freertos/include -IC:/esp/v5.2.6/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v5.2.6/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v5.2.6/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v5.2.6/esp-idf/components/esp_event/include -IC:/esp/v5.2.6/esp-idf/components/esp_wifi/include -IC:/esp/v5.2.6/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/v5.2.6/esp-idf/components/esp_phy/include -IC:/esp/v5.2.6/esp-idf/components/esp_phy/esp32/include -IC:/esp/v5.2.6/esp-idf/components/esp_netif/include -IC:/esp/v5.2.6/esp-idf/components/nvs_flash/include -IC:/esp/v5.2.6/esp-idf/components/spi_flash/include -IC:/esp/v5.2.6/esp-idf/components/esp_partition/include -IC:/esp/v5.2.6/esp-idf/components/mqtt/esp-mqtt/include -IC:/esp/v5.2.6/esp-idf/components/tcp_transport/include -IC:/esp/v5.2.6/esp-idf/components/esp-tls -IC:/esp/v5.2.6/esp-idf/components/esp-tls/esp-tls-crypto -IC:/esp/v5.2.6/esp-idf/components/mbedtls/port/include -IC:/esp/v5.2.6/esp-idf/components/mbedtls/mbedtls/include -IC:/esp/v5.2.6/esp-idf/components/mbedtls/mbedtls/library -IC:/esp/v5.2.6/esp-idf/components/mbedtls/esp_crt_bundle/include -IC:/esp/v5.2.6/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/esp/v5.2.6/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/esp/v5.2.6/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IC:/esp/v5.2.6/esp-idf/components/esp_timer/include -IC:/esp/v5.2.6/esp-idf/components/json/cJSON -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/vital_signs_monitoring_sys=. -fmacro-prefix-map=C:/esp/v5.2.6/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/vital_signs_monitoring_sys.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\vital_signs_monitoring_sys.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/vital_signs_monitoring_sys.c.obj -c D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c
D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c: In function 'csi_sender_task':
D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c:334:9: error: 'off' undeclared (first use in this function)
  334 |         off += snprintf(json + off, jsonsz - off, "]}");
      |         ^~~
D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c:334:9: note: each undeclared identifier is reported only once for each function it appears in
D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c:334:25: error: 'json' undeclared (first use in this function)
  334 |         off += snprintf(json + off, jsonsz - off, "]}");
      |                         ^~~~
D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c:334:37: error: 'jsonsz' undeclared (first use in this function)
  334 |         off += snprintf(json + off, jsonsz - off, "]}");
      |                                     ^~~~~~
D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c: At top level:
D:/vital_signs_monitoring_sys/main/vital_signs_monitoring_sys.c:347:1: error: expected identifier or '(' before '}' token
  347 | }
      | ^
ninja: build stopped: subcommand failed.
